--- a/OrderCoachoutlet/UI/MainWindow.xaml
+++ b/OrderCoachoutlet/UI/MainWindow.xaml
@@ -26,37 +26,49 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Grid Grid.RowSpan="2">
-            <Button x:Name="btn_loadProxy" Click="btn_loadProxy_Click" IsEnabled="{Binding IsRunning,Converter={StaticResource InverseBooleanConverter}}" HorizontalAlignment="Right" Margin="0,10,10,0" VerticalAlignment="Top" Width="160">
-                <TextBlock>
+
+            <StackPanel Orientation="Vertical" Margin="5,10,5,0" VerticalAlignment="Top" HorizontalAlignment="Stretch" WpfUiControl:Spacing.Vertical="10">
+                <Button x:Name="btn_loadProxy" Click="btn_loadProxy_Click" IsEnabled="{Binding IsRunning,Converter={StaticResource InverseBooleanConverter}}" HorizontalAlignment="Stretch">
+                    <TextBlock>
                     <Run Text="Load Proxy ( "/>
                     <Run Text="{Binding DataManaged.ProxyCount,Mode=OneWay}"/>
                     <Run Text=" )"/>
-                </TextBlock>
-            </Button>
-            <Button x:Name="btn_loadName" Click="btn_loadName_Click" IsEnabled="{Binding IsRunning,Converter={StaticResource InverseBooleanConverter}}" HorizontalAlignment="Center" Margin="0,35,0,0" VerticalAlignment="Top" Width="160">
-                <TextBlock>
+                    </TextBlock>
+                </Button>
+                <Button x:Name="btn_loadName" Click="btn_loadName_Click" IsEnabled="{Binding IsRunning,Converter={StaticResource InverseBooleanConverter}}" HorizontalAlignment="Stretch">
+                    <TextBlock>
                     <Run Text="Load Name ( "/>
                     <Run Text="{Binding DataManaged.NameCount,Mode=OneWay}"/>
                     <Run Text=" )"/>
-                </TextBlock>
-            </Button>
-            <Button x:Name="btn_loadAddress" Click="btn_loadAddress_Click" IsEnabled="{Binding IsRunning,Converter={StaticResource InverseBooleanConverter}}" HorizontalAlignment="Center" Margin="0,60,0,0" VerticalAlignment="Top" Width="160">
-                <TextBlock>
+                    </TextBlock>
+                </Button>
+                <Button x:Name="btn_loadAddress" Click="btn_loadAddress_Click" IsEnabled="{Binding IsRunning,Converter={StaticResource InverseBooleanConverter}}" HorizontalAlignment="Stretch">
+                    <TextBlock>
                     <Run Text="Load Address ( "/>
                     <Run Text="{Binding DataManaged.AddressCount,Mode=OneWay}"/>
                     <Run Text=" )"/>
-                </TextBlock>
-            </Button>
-            <Button x:Name="btn_loadCard" Click="btn_loadCard_Click" IsEnabled="{Binding IsRunning,Converter={StaticResource InverseBooleanConverter}}" HorizontalAlignment="Center" Margin="0,85,0,0" VerticalAlignment="Top" Width="160">
-                <TextBlock>
+                    </TextBlock>
+                </Button>
+                <Button x:Name="btn_loadCard" Click="btn_loadCard_Click" IsEnabled="{Binding IsRunning,Converter={StaticResource InverseBooleanConverter}}" HorizontalAlignment="Stretch">
+                    <TextBlock>
                     <Run Text="Load Card ( "/>
                     <Run Text="{Binding DataManaged.CardCount,Mode=OneWay}"/>
                     <Run Text=" )"/>
-                </TextBlock>
-            </Button>
+                    </TextBlock>
+                </Button>
+                
+                <Button x:Name="btn_loadProduct" Click="btn_loadProduct_Click" IsEnabled="{Binding IsRunning,Converter={StaticResource InverseBooleanConverter}}" HorizontalAlignment="Stretch">
+                    <TextBlock>
+                    <Run Text="Load Product ( "/>
+                    <Run Text="{Binding DataManaged.ProductCount,Mode=OneWay}"/>
+                    <Run Text=" )"/>
+                    </TextBlock>
+                </Button>
+            </StackPanel>
 
-            <TextBlock Text="Số luồng:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="5,143,0,0"/>
-            <Xceed:IntegerUpDown Value="{Binding ThreadCount}" IsEnabled="{Binding IsRunning,Converter={StaticResource InverseBooleanConverter}}" Minimum="1" Maximum="128" Increment="1" VerticalAlignment="Top" Margin="90,138,10,0" Height="24"/>
+
+            <TextBlock Text="Số luồng:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="5,320,0,0"/>
+            <Xceed:IntegerUpDown Value="{Binding ThreadCount}" IsEnabled="{Binding IsRunning,Converter={StaticResource InverseBooleanConverter}}" Minimum="1" Maximum="128" Increment="1" VerticalAlignment="Top" Margin="90,316,10,0" Height="24"/>
 
             <Button x:Name="btn_start" Click="btn_start_Click" IsEnabled="{Binding IsRunning,Converter={StaticResource InverseBooleanConverter}}" Content="Start" VerticalAlignment="Bottom" HorizontalAlignment="Stretch" Margin="10,0,10,50"/>
             <Button x:Name="btn_stop" Click="btn_stop_Click" IsEnabled="{Binding IsRunning}" Content="Stop" VerticalAlignment="Bottom" HorizontalAlignment="Stretch" Margin="10,0,10,5"/>
